[package]
name = "memcached_proxy"
version = "0.1.0"
authors = ["Romain GERARD <r.gerard@criteo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
bytes = "0.5"
num-derive = "0.3"
num-traits = "0.2"
num = "0.2"